qjsbind-derive/src/snapshots/qjsbind_derive__derive_gc_mark__show_tokens.snap
---
source: qjsbind-derive/src/derive_gc_mark.rs
expression: "rustfmt_snippet::rustfmt(&generated.to_string()).unwrap()"
---
const _: () = {
    use qjsbind::{c, GcMark, Value};
    impl GcMark for Test {
        fn gc_mark(&self, rt: *mut c::JSRuntime, mrk: c::JS_MarkFunc) {
            #[allow(unused_variables)]
            let (rt, mrk) = (rt, mrk);
            GcMark::gc_mark(&self.0, rt, mrk);
            GcMark::gc_mark(&self.1, rt, mrk);
            GcMark::gc_mark(&self.2, rt, mrk);
            GcMark::gc_mark(&self.3, rt, mrk);
        }
    }
};
